--- a/index.html
+++ b/index.html
@@ -53,15 +53,23 @@
 	</header>
 	<section class="home">
 		<div>
-			<h4>"Haga lo que le dé la gana sin afectar al projimo"</h4>
+			<h4>"Haga lo que le dé la gana sin afectar al projimo"</h4>			
 		</div>
 		<img src="img/notas.gif" alt="">
+		<div>
+			<audio id="audio">
+				<source src="audio/vozMarvin.mpeg" type="audio/mpeg">
+			</audio>
+			<button id="playPauseBTN" onclick="playPause()">Play &#9658;</button>
+			&nbsp;
+			&nbsp;
+		</div>		
 	</section>
 	<section>
 		<div class="perfil">
 			<img loading="lazy" src="img/Perfil3.jpeg" alt="Marvin Hernandez">
 			<div class="perfil-texto">
-				<a href="#">
+				<a href="main.js:playPause()" class="playPause">
 					<span></span>
 					<span></span>
 					<span></span>
@@ -118,6 +126,7 @@
 		       <input type="radio" name="radio-btn" id="radio2">
 		       <input type="radio" name="radio-btn" id="radio3">
 		       <input type="radio" name="radio-btn" id="radio4">
+		       <input type="radio" name="radio-btn" id="radio5">
 		       <!--radio buttons end-->
 		       <!--slide images start-->
 		       <div class="slide first">
@@ -132,12 +141,16 @@
 		       <div loading="lazy" class="slide">
 		         <img src="img/MMShows.jpg" alt="">
 		       </div>
+		       <div class="slide">
+		         <img loading="lazy" src="img/opticaGG.jpeg" alt="">
+		       </div>
 		       <!--automatic navigation start-->
 		       <div class="navigation-auto">
 		         <div class="auto-btn1"></div>
 		         <div class="auto-btn2"></div>
 		         <div class="auto-btn3"></div>
 		         <div class="auto-btn4"></div>
+		         <div class="auto-btn5"></div>
 		       </div>
 		       <!--automatic navigation end-->
 		     </div>
@@ -147,6 +160,7 @@
 		       <label for="radio2" class="manual-btn"></label>
 		       <label for="radio3" class="manual-btn"></label>
 		       <label for="radio4" class="manual-btn"></label>
+		       <label for="radio5" class="manual-btn"></label>
 		     </div>
 		    </div>
 			<!--Image Slider End-->
