--- a/index.html
+++ b/index.html
@@ -130,19 +130,19 @@
 		       <!--radio buttons end-->
 		       <!--slide images start-->
 		       <div class="slide first">
-		         <img loading="lazy" src="img/publicidad.jpg" alt="">
+		         <img loading="lazy" src="img/publicidad.jpg" alt="Tu publicidad Aqui">
 		       </div>
 		       <div class="slide">
 		         <img loading="lazy" src="img/LogoProtego.jpg" alt="">
 		       </div>
-		       <div loading="lazy" class="slide">
-		         <img src="img/impulsar.jpg" alt="">
-		       </div>
-		       <div loading="lazy" class="slide">
-		         <img src="img/MMShows.jpg" alt="">
+		       <div class="slide">
+		         <img src="img/impulsar.jpg" alt="" loading="lazy">
 		       </div>
 		       <div class="slide">
-		         <img loading="lazy" src="img/opticaGG.jpeg" alt="">
+		         <img src="img/MMShows.jpg" alt="" loading="lazy">
+		       </div>
+		       <div class="slide">
+		         <img src="img/opticaGG.jpeg" alt="" loading="lazy">
 		       </div>
 		       <!--automatic navigation start-->
 		       <div class="navigation-auto">
