--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 			</div>
 			<ul class="nav-links">
 				<li><a href="#" id="home">Home</a></li>
-				<li><a href="#" id="colegas">Colegas</a></li>
-				<li><a href="#" id="quiensoy">Quien Soy</a></li>
-				<li><a href="#" id="live">Live</a></li>
+				<li><a href="Proximamente/index.html" id="colegas">Colegas</a></li>
+				<li><a href="Proximamente/index.html" id="quiensoy">Quien Soy</a></li>
+				<li><a href="Proximamente/index.html" id="live">Live</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -69,7 +69,7 @@
 		<div class="perfil">
 			<img loading="lazy" src="img/Perfil3.jpeg" alt="Marvin Hernandez">
 			<div class="perfil-texto">
-				<a href="main.js:playPause()" class="playPause">
+				<a href="Proximamente/index.html" class="playPause">
 					<span></span>
 					<span></span>
 					<span></span>
@@ -130,7 +130,7 @@
 		       <!--radio buttons end-->
 		       <!--slide images start-->
 		       <div class="slide first">
-		         <img src="img/publicidad1.jpg" alt="Tu publicidad Aqui">
+		         <img src="img/opticaGG.jpeg" alt="Tu publicidad Aqui">
 		       </div>
 		       <div class="slide">
 		         <img loading="lazy" src="img/LogoProtego.jpg" alt="">
