update imagen publicidad

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 		       <!--radio buttons end-->
 		       <!--slide images start-->
 		       <div class="slide first">
-		         <img src="img/opticaGG.jpeg" alt="Tu publicidad Aqui">
+		         <img src="img/publicidad1.jpeg" alt="Tu publicidad Aqui">
 		       </div>
 		       <div class="slide">
 		         <img loading="lazy" src="img/LogoProtego.jpg" alt="">
