--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<span></span>
 					Al Aire
 				</a>
-				<p>Marco Vinicio Hernández Sanchez reconocido en el mundo musical ecuatoriano como Marvin Hernández. Mi carrera inicia en el año de 1999 luego de cursar una preparación como Radio Locutor. He trabajado en para radios reconocidas de Quito y Ecuador. Actualmente presto mis servicios para Radio La Poderosa 92.9FM de lunes a viernes de 6pm a 9pm.</p>
+				<p>Marco Vinicio Hernández Sanchez reconocido en el mundo musical ecuatoriano como Marvin Hernández. Mi carrera inicia en el año de 1999 luego de cursar una preparación como Locución de Radio. He trabajado en para radios reconocidas de Quito y Ecuador. Actualmente presto mis servicios para Radio La Poderosa 92.9FM de lunes a viernes de 6pm a 9pm.</p>
 			</div>
 		</div>
 	</section>
@@ -130,7 +130,7 @@
 		       <!--radio buttons end-->
 		       <!--slide images start-->
 		       <div class="slide first">
-		         <img src="img/opticaGG.jpeg" alt="Tu publicidad Aqui">
+		         <img src="img/intro.jpg" alt="Nosotros tenemos todo">
 		       </div>
 		       <div class="slide">
 		         <img loading="lazy" src="img/LogoProtego.jpg" alt="">
