--- a/index.html
+++ b/index.html
@@ -3,15 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="nav.css">
 	<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="icon" type="image/png" href="img/microphone.ico" />
 	<title>Marvin</title>
 	<style>
-	    section {
+	    /* section {
 	        min-height: 100vh;
-	        background-image: url(img/microphoneFondo.jpg);
+	        background-image: url(img/microBlanco.jpg);
 	        background-size: cover;
 	        background-position: center;
 	        z-index: 1;
@@ -28,7 +27,7 @@
 	        background-color: #000000;
 	        opacity: 0.3;
 	        z-index: -1;
-	    }
+	    } */
 	</style>
 </head>
 <body>
@@ -45,9 +44,9 @@
 			</div>
 			<ul class="nav-links">
 				<li><a href="#" id="home">Home</a></li>
-				<li><a href="Proximamente/index.html" id="colegas">Colegas</a></li>
+				<li><a href="Proximamente/index.html" id="colegas">Campeonato</a></li>
 				<li><a href="Proximamente/index.html" id="quiensoy">Quien Soy</a></li>
-				<li><a href="Proximamente/index.html" id="live">Live</a></li>
+				<li><a href="#Contacto" id="live">Contacto</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -63,11 +62,14 @@
 			<button id="playPauseBTN" onclick="playPause()">Play &#9658;</button>
 			&nbsp;
 			&nbsp;
-		</div>		
+		</div>
 	</section>
-	<section>
+	<section class="perfilado">
 		<div class="perfil">
-			<img loading="lazy" src="img/Perfil3.jpeg" alt="Marvin Hernandez">
+			<div class="perfilOne">
+				<img loading="lazy" src="img/Perfil3.jpeg" alt="Marvin Hernandez">
+
+			</div>
 			<div class="perfil-texto">
 				<a href="Proximamente/index.html" class="playPause">
 					<span></span>
@@ -76,100 +78,109 @@
 					<span></span>
 					Al Aire
 				</a>
-				<p>Marco Vinicio Hernández Sanchez reconocido en el mundo musical ecuatoriano como Marvin Hernández. Mi carrera inicia en el año de 1999 luego de cursar una preparación como Locución de Radio. He trabajado en para radios reconocidas de Quito y Ecuador. Actualmente presto mis servicios para Radio La Poderosa 92.9FM de lunes a viernes de 6pm a 9pm.</p>
+				<p>Marco Vinicio Hernández Sanchez reconocido en el mundo musical ecuatoriano como Marvin Hernández. Mi carrera inicia en el año de 1999 luego de cursar una preparación como Locución de Radio. He trabajado en para radios reconocidas de Quito y Ecuador. Actualmente presto mis servicios para Radio La Poderosa 92.9 FM de lunes a viernes de 6pm a 9pm.</p>
 			</div>
 		</div>
 	</section>
+	<!-- Cards Activities -->
 	<section class="fondo_tarjetas">
-		<div class="video">
-			<video loading="lazy" src="img/video.mp4" autoplay muted loop></video>
+		
+		<div class="thecontainer">
+			<div class="card">
+				<div class="imgBx" data-text="Eventos">
+					<!-- <img src="/img/dancing2.png" alt=""> -->
+					<i class='bx bx-beer bx-fade-left' ></i>
+				</div>
+				<div class="thecontent">
+					<div class="">
+						<h3>Eventos</h3>
+						<p>Los mejores eventos te lo brindamos nosotros</p>
+						<a href="#">Leer mas</a>
+					</div>
+				</div>
+			</div>
+			<div class="card">
+				<div class="imgBx" data-text="Buffet">
+					<i class='bx bx-dish bx-tada' ></i>
+					
+				</div>
+				<div class="thecontent">
+					<div class="">
+						<h3>Buffet</h3>
+						<p>Tenemos tod para su evento social amplificación, luces, camaras de humo, pirotecnia ademas contamos con maestros de ceremonia.</p>
+						<a href="#">Leer mas</a>
+					</div>
+				</div>
+			</div>
+			<div class="card">
+				<div class="imgBx" data-text="Musica">
+					<i class='bx bxs-music bx-burst' ></i>
+				</div>
+				<div class="thecontent">
+					<div class="">
+						<h3>Musica</h3>
+						<p>Venta de musica para dj's, mixes, versiones limpias y remix radio. Contamos con radio dj para tu compromiso.</p>
+						<a href="#">Leer mas</a>
+					</div>
+				</div>
+			</div>
+			<div class="card">
+				<div class="imgBx" data-text="Ferias">
+					<i class='bx bx-store bx-fade-down' ></i>
+				</div>
+				<div class="thecontent">
+					<div class="">
+						<h3>Feria</h3>
+						<p>Los mejores eventos te lo brindamos nosotros</p>
+						<a href="#">Leer mas</a>
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="contenedor">
-			<div class="contenedor_tarjeta">
-					<figure>
-						<img loading="lazy" src="img/sonido.jpg" class="frontal" alt="">
-						<figcaption class="atras">
-							<h2 class="titulo">Sonido y Amplificación profesional.</h2>
-							<hr>
-							<p>Contamos con amplificación profesional, parlantes amplificados, luces roboticas y Radio djs para tu evento.</p>
-						</figcaption>
-					</figure>
-			</div>
-			<div class="contenedor_tarjeta">
-					<figure>
-						<img loading="lazy" src="img/eventos.jpg" class="frontal" alt="">
-						<figcaption class="atras">
-							<h2 class="titulo">Recepción y Servicio de Buffet</h2>
-							<hr>
-							<p>Te ofrecemos el servicio de catering para todo tipo de evento, chefs y meseros profesionales.</p>
-						</figcaption>
-					</figure>
-			</div>
-			<div class="contenedor_tarjeta">
-					<figure>
-						<img loading="lazy" src="img/estudio.jpg" class="frontal" alt="">
-						<figcaption class="atras">
-							<h2 class="titulo">Producción de Audio y Video</h2>
-							<hr>
-							<p>Realización de cuñas radiales y spot televisivos. Venta de musica actualizada.</p>
-						</figcaption>
-					</figure>
-			</div>
-			<h2>Tenemos todo para tu evento.</h2>
+
 		</div>
 	</section>
-	<section class="periodico">
-		<div class="slider">
-		     <div class="slides">
-		       <!--radio buttons start-->
-		       <input type="radio" name="radio-btn" id="radio1">
-		       <input type="radio" name="radio-btn" id="radio2">
-		       <input type="radio" name="radio-btn" id="radio3">
-		       <input type="radio" name="radio-btn" id="radio4">
-		       <input type="radio" name="radio-btn" id="radio5">
-		       <!--radio buttons end-->
-		       <!--slide images start-->
-		       <div class="slide first">
-<<<<<<< HEAD
-		         <img src="img/intro.jpg" alt="Nosotros tenemos todo">
-=======
-		         <img src="img/publicidad1.jpeg" alt="Tu publicidad Aqui">
->>>>>>> 2258313bffc46cc88e01643ee2d43e9380cd2f04
-		       </div>
-		       <div class="slide">
-		         <img loading="lazy" src="img/LogoProtego.jpg" alt="">
-		       </div>
-		       <div class="slide">
-		         <img src="img/impulsar.jpg" alt="" loading="lazy">
-		       </div>
-		       <div class="slide">
-		         <img src="img/MMShows.jpg" alt="" loading="lazy">
-		       </div>
-		       <div class="slide">
-		         <img src="img/opticaGG.jpeg" alt="" loading="lazy">
-		       </div>
-		       <!--automatic navigation start-->
-		       <div class="navigation-auto">
-		         <div class="auto-btn1"></div>
-		         <div class="auto-btn2"></div>
-		         <div class="auto-btn3"></div>
-		         <div class="auto-btn4"></div>
-		         <div class="auto-btn5"></div>
-		       </div>
-		       <!--automatic navigation end-->
-		     </div>
-		     <!--manual navigation start-->
-		     <div class="navigation-manual">
-		       <label for="radio1" class="manual-btn"></label>
-		       <label for="radio2" class="manual-btn"></label>
-		       <label for="radio3" class="manual-btn"></label>
-		       <label for="radio4" class="manual-btn"></label>
-		       <label for="radio5" class="manual-btn"></label>
-		     </div>
-		    </div>
-			<!--Image Slider End-->
+	<!-- End cards activites -->
+	<!--Image Slider Start-->
+	<section class="mejor">
+		<div class="carrusel">
+			<div class="carrusel-track">
+				<div class="carrusel-slide">
+					<img src="/img/intro.jpg" alt="">
+				</div>
+				<div class="carrusel-slide">
+					<img src="/img/intro.jpg" alt="">
+				</div>
+				<div class="carrusel-slide">
+					<img src="/img/intro.jpg" alt="">
+				</div>
+				<div class="carrusel-slide">
+					<img src="/img/intro.jpg" alt="">
+				</div>
+
+				<div class="carrusel-slide">
+					<img src="/img/impulsar.jpg" alt="">
+				</div>
+				<div class="carrusel-slide">
+					<img src="/img/impulsar.jpg" alt="">
+				</div>
+				<div class="carrusel-slide">
+					<img src="/img/impulsar.jpg" alt="">
+				</div>
+				<div class="carrusel-slide">
+					<img src="/img/impulsar.jpg" alt="">
+				</div>
+			</div>
+		</div>
+		<div class="boton-campeonato">
+			<button class="cssbuttons-io-button">CAMPEONATO				<div class="icon">
+				<i class='bx bx-football bx-tada bx-flip-horizontal' ></i>
+				</div>
+			  </button>
+		</div>
 	</section>
-	<footer class="conten-footer">
+	<!--Image Slider End-->
+	<footer class="conten-footer" id="Contacto">
 		<h2>Contactos</h2>
 		<div class="redes-sociales">
 			<div class="contenedor-icono">
@@ -193,7 +204,7 @@
 				</a>
 			</div>
 		</div>
-		<p>GH Desarrollo 2021</p>
+		<p>GH Desarrollo 2021-2022</p>
 	</footer>
 	<script type="text/javascript" src="main.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
